--- a/index.css
+++ b/index.css
@@ -1,5 +1,7 @@
 :root {
     --text-color: black;
+    --emperor: #555555;
+    --mine-shaft: #333333;
 }
 
 .hide{
@@ -8,8 +10,55 @@
 .text{
     color: var(--text-color);
     text-decoration: none;
+    cursor: auto;
+    pointer-events: none;
 }
 .font-family {
     font-family: Helvetica, Arial, sans-serif;
     font-size: 24pt;
 }
+
+.layout {
+    position: relative;
+    color: var(--mine-shaft);
+    overflow: hidden;
+}
+
+.layout::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 127%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    background-image: url('assets/pink-bg.svg');
+    transform: scale(2.5);
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+.layout .container {
+    margin: 0 auto;
+    width: 960px;
+}
+
+.layout .container h1 {
+    font-family: 'Merienda', cursive;
+    font-size: 120pt;
+    color: var(--emperor);
+    margin: 0;
+}
+
+.layout .text {
+    color: var(--mine-shaft);
+}
+.layout .detail ul a {
+    color: var(--emperor);
+    font-weight: bold;
+}
+
+.layout .detail ul a:hover {
+    color: var(--text-color);
+}
+
