--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@
 .hide{
     display: none;
 }
+
 .text{
     color: var(--text-color);
     text-decoration: none;
@@ -21,7 +22,7 @@
 .layout {
     position: relative;
     color: var(--mine-shaft);
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .layout::before {
@@ -62,3 +63,24 @@
     color: var(--text-color);
 }
 
+.flexy .flex-container {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+}
+
+.image-column {
+    display: none;
+}
+
+.flexy .image-column {
+    display: block;
+}
+
+.images img{
+    border-color: #A1E6E3;
+    border-width: 10px;
+    border-style: solid;
+    margin-block-start: 20px;
+
+}
