--- a/index.css
+++ b/index.css
@@ -40,17 +40,9 @@
     overflow-x: hidden;
 }
 
-.layout::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 127%;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    background-image: url('assets/pink-bg.svg');
-    transform: scale(2.5);
-    background-position: center;
+.layout {
+    background-image: url('assets/pink-bg.png');
+    background-position: top left;
     background-repeat: no-repeat;
   }
 
